fixing background attachment on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -703,6 +703,7 @@ body form {
 
 	#home-supporting-2 {
 		margin:20px;
+		background-attachment: none;
 	}
 
 	#origenes-supporting #button {
